<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfNotifyFragment">

    <Button
        android:id="@+id/conf_notify_back_bt"
        android:layout_width="40dp"
        android:layout_height="45dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconTint="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/conf_notify_sw1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/conf_text2"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:trackTint="#0027FF"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/conf_notify_tv1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/conf_notify_limit_food"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@id/conf_notify_sw1"
        app:layout_constraintStart_toStartOf="@id/conf_notify_sw1"/>

    <Spinner
        android:id="@+id/conf_notify_sp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/conf_notify_tv1"
        app:layout_constraintStart_toEndOf="@id/conf_notify_tv1"/>

    <TextView
        android:id="@+id/conf_notify_tv2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/conf_notify_day_ago"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/conf_notify_tv1"
        app:layout_constraintStart_toEndOf="@id/conf_notify_sp"/>

    <Switch
        android:id="@+id/conf_notify_sw2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/conf_text3"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:trackTint="#0027FF"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/conf_notify_tv1"
        app:layout_constraintStart_toStartOf="@id/conf_notify_sw1"/>

</androidx.constraintlayout.widget.ConstraintLayout>