<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pass_ask_update_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".PassUpdateActivity">

    <Button
        android:id="@+id/pass_update_return_bt"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:background="@drawable/return_button_background"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconTint="@color/black"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pass_update_title_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:background="@drawable/app_name_bt_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pass_update_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_update"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_update_return_bt" />

    <TextView
        android:id="@+id/pass_update_txt1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/pass_update_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/new_password"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/paas_update_til1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:hint="@string/password_input"
        app:hintTextColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/pass_update_txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_update_tiet1"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pass_update_txt2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/paas_update_til1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/pass_again_text"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/paas_update_til2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:hint="@string/same_password"
        app:hintTextColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/pass_update_txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_update_tiet2"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/pass_update_update_bt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/limit_money_change"
        android:textColor="@color/black"
        android:background="@drawable/normal_bt_background"
        app:backgroundTint="@null"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paas_update_til2"/>


</androidx.constraintlayout.widget.ConstraintLayout>