<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conf_userinfo_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfUserInfoFragment">

    <Button
        android:id="@+id/conf_userinfo_back_bt"
        android:layout_width="40dp"
        android:layout_height="45dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconTint="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/conf_userinfo_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_text1"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/conf_userinfo_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_id"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/conf_userinfo_tv1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/conf_userinfo_id_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/conf_userinfo_tv2"
        app:layout_constraintStart_toStartOf="@id/conf_userinfo_tv2" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/conf_userinfo_id"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/conf_userinfo_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/conf_userinfo_id_til"
        app:layout_constraintStart_toStartOf="@id/conf_userinfo_tv2" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/conf_userinfo_pass_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/password_input"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:hintTextColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/conf_userinfo_tv3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/conf_userinfo_pass"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/conf_userinfo_tv4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/conf_userinfo_tv2"
        app:layout_constraintTop_toBottomOf="@id/conf_userinfo_pass_til"
        android:text="@string/pass_again_text"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/conf_userinfo_repass_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/same_password"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:hintTextColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/conf_userinfo_tv4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/conf_userinfo_repass"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/conf_userinfo_update_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_ok"
        android:textSize="15sp"
        android:textColor="@color/gray"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/conf_userinfo_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/conf_userinfo_bt"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/limit_money_change"
        android:textSize="18sp"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/conf_userinfo_repass_til"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>