<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".PassUpdateActivity">

    <Button
        android:id="@+id/pass_update_comp_title_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:background="@drawable/app_name_bt_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pass_update_comp_title_txt"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="85dp"
        android:text="@string/pass_update_comp_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pass_update_login_bt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/login_name"
        android:textColor="#000000"
        android:background="@drawable/normal_bt_background"
        app:backgroundTint="@null"
        android:textSize="20dp"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_update_comp_title_txt"/>


</androidx.constraintlayout.widget.ConstraintLayout>